--- a/test-output/index.html
+++ b/test-output/index.html
@@ -91,7 +91,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">0 methods,   </span>
+                    <span class="method-stats">1 method,   1 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-registration_suite" class="hide-methods passed suite-registration_suite"> (hide)</a> <!-- hide-methods passed suite-registration_suite -->
+                      <a href="#" panel-name="suite-registration_suite" class="show-methods passed suite-registration_suite"> (show)</a> <!-- show-methods passed suite-registration_suite -->
+                    </span>
+                    <div class="method-list-content passed suite-registration_suite">
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-registration_suite" title="com.hms.registration.TestPermanenetRegistration" hash-for-method="testPermanentRegistration({Header-testcasename=testPermanentRegistration, testid=C005, testtype=sanity, Result=PASS, patientca...)">testPermanentRegistration({Header-testcasename=testPermanentRegistration, testid=C005, testtype=sanity, Result=PASS, patientca...)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content passed suite-registration_suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -156,7 +170,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">0 methods,   </span>
+                    <span class="method-stats">1 method,   1 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-registration_suite_(0)" class="hide-methods passed suite-registration_suite_(0)"> (hide)</a> <!-- hide-methods passed suite-registration_suite_(0) -->
+                      <a href="#" panel-name="suite-registration_suite_(0)" class="show-methods passed suite-registration_suite_(0)"> (show)</a> <!-- show-methods passed suite-registration_suite_(0) -->
+                    </span>
+                    <div class="method-list-content passed suite-registration_suite_(0)">
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-registration_suite_(0)" title="com.hms.registration.TestEmergencyRegistration" hash-for-method="testEmergencyRegistration({Header-testcasename=testEmergencyRegistration, testid=C005, testtype=regression, Result=PASS, patCa...)">testEmergencyRegistration({Header-testcasename=testEmergencyRegistration, testid=C005, testtype=regression, Result=PASS, patCa...)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content passed suite-registration_suite_(0) -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -170,8 +198,40 @@
         <div panel-name="suite-HMSMainSuite" class="panel HMSMainSuite">
         </div> <!-- panel HMSMainSuite -->
         <div panel-name="suite-registration_suite" class="panel registration_suite">
+          <div class="suite-registration_suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.hms.registration.TestPermanenetRegistration</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="testPermanentRegistration({Header-testcasename=testPermanentRegistration, testid=C005, testtype=sanity, Result=PASS, patientca...)">
+                  </a> <!-- testPermanentRegistration({Header-testcasename=testPermanentRegistration, testid=C005, testtype=sanity, Result=PASS, patientca...) -->
+                  <span class="method-name">testPermanentRegistration</span>
+                  <span class="parameters">({Header-testcasename=testPermanentRegistration, testid=C005, testtype=sanity, Result=PASS, patientcategory=Self, title=Mr., firstname=rahul, lastname=kumar, dob=13-08-1992, age=25.0, gender=Male, maritalstatus=Single, religion=Hindu, primarylanguage=Telugu, address1=kukatpally, phone=9885373372, country=India, relation=Brother, patientidentifier=PAN Card, panno=AVPPR99C, nationality=Indian, vip=No, education=B.Tech, occupation=Employee, bloodgroup=A+, citizenship=Indian, seniorcitizen=Yes, pinorzip=532168, conform=Patient Registration Successfully}, PASS)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-registration_suite-class-passed -->
         </div> <!-- panel registration_suite -->
         <div panel-name="suite-registration_suite_(0)" class="panel registration_suite_(0)">
+          <div class="suite-registration_suite_(0)-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.hms.registration.TestEmergencyRegistration</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="testEmergencyRegistration({Header-testcasename=testEmergencyRegistration, testid=C005, testtype=regression, Result=PASS, patCa...)">
+                  </a> <!-- testEmergencyRegistration({Header-testcasename=testEmergencyRegistration, testid=C005, testtype=regression, Result=PASS, patCa...) -->
+                  <span class="method-name">testEmergencyRegistration</span>
+                  <span class="parameters">({Header-testcasename=testEmergencyRegistration, testid=C005, testtype=regression, Result=PASS, patCat=Self, title=Mr., firstname=rahul, lastname=rahul, dob=13-08-1992, age=24, gender=Male, patIdentifier=PAN Card, pan=AVPPR99C, blood group=A+, address1=kukatpally, phone=9885373372, pin or zip=532168, conform=Patient Registration Successfully}, PASS)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-registration_suite_(0)-class-passed -->
         </div> <!-- panel registration_suite_(0) -->
         <div panel-name="test-xml-HMSMainSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -341,11 +401,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(0);
+data.addRows(1);
+data.setCell(0, 0, 0)
+data.setCell(0, 1, 'testPermanentRegistration')
+data.setCell(0, 2, 'com.hms.registration.TestPermanenetRegistration')
+data.setCell(0, 3, 10815);
 window.suiteTableData['registration_suite']= { tableData: data, tableDiv: 'times-div-registration_suite'}
 return data;
 }
               </script>
+              <span class="suite-total-time">Total running time: 10 seconds</span>
               <div id="times-div-registration_suite">
               </div> <!-- times-div-registration_suite -->
             </div> <!-- times-div -->
@@ -365,11 +430,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(0);
+data.addRows(1);
+data.setCell(0, 0, 0)
+data.setCell(0, 1, 'testEmergencyRegistration')
+data.setCell(0, 2, 'com.hms.registration.TestEmergencyRegistration')
+data.setCell(0, 3, 7717);
 window.suiteTableData['registration_suite_(0)']= { tableData: data, tableDiv: 'times-div-registration_suite_(0)'}
 return data;
 }
               </script>
+              <span class="suite-total-time">Total running time: 7 seconds</span>
               <div id="times-div-registration_suite_(0)">
               </div> <!-- times-div-registration_suite_(0) -->
             </div> <!-- times-div -->
@@ -437,12 +507,20 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-test before">
                 <span class="method-name">login</span>
-                <span class="method-start">18511 ms</span>
+                <span class="method-start">16274 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-class before">
                 <span class="method-name">beforeClass</span>
-                <span class="method-start">26214 ms</span>
+                <span class="method-start">24242 ms</span>
               </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">testPermanentRegistration({Header-testcasename=testPermanentRegistration, testid=C005, testtype=sanity, Result=PASS, patientca...)</span>
+                <span class="method-start">25988 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethod([TestResult name=testPermanentRegistration status=SUCCESS method=TestPermanenetRegistration.testPerm...)</span>
+                <span class="method-start">36805 ms</span>
+              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-registration_suite_(0)" class="panel">
@@ -458,12 +536,20 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-test before">
                 <span class="method-name">login</span>
-                <span class="method-start">8846 ms</span>
+                <span class="method-start">8243 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-class before">
                 <span class="method-name">beforeClass</span>
-                <span class="method-start">16144 ms</span>
+                <span class="method-start">15941 ms</span>
               </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">testEmergencyRegistration({Header-testcasename=testEmergencyRegistration, testid=C005, testtype=regression, Result=PASS, patCa...)</span>
+                <span class="method-start">16038 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethod([TestResult name=testEmergencyRegistration status=SUCCESS method=TestEmergencyRegistration.testEmerg...)</span>
+                <span class="method-start">23757 ms</span>
+              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
