--- a/test-output/old/registration_suite (0)/methods.html
+++ b/test-output/old/registration_suite (0)/methods.html
@@ -1,10 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>registration_suite (0)</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9168bc">  <td>19/03/15 17:02:42</td>   <td>0</td> <td title="&gt;&gt;TestBaseClass.launchBrowser()[pri:0, instance:com.hms.registration.TestEmergencyRegistration@8646db9]">&gt;&gt;launchBrowser</td> 
+<tr bgcolor="9168bc">  <td>19/03/15 18:05:49</td>   <td>0</td> <td title="&gt;&gt;TestBaseClass.launchBrowser()[pri:0, instance:com.hms.registration.TestEmergencyRegistration@8646db9]">&gt;&gt;launchBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@586084331</td>   <td></td> </tr>
-<tr bgcolor="9168bc">  <td>19/03/15 17:02:51</td>   <td>8846</td> <td>&nbsp;</td><td title="&gt;&gt;TestBaseClass.login()[pri:0, instance:com.hms.registration.TestEmergencyRegistration@8646db9]">&gt;&gt;login</td> 
+<tr bgcolor="9168bc">  <td>19/03/15 18:05:57</td>   <td>8243</td> <td>&nbsp;</td><td title="&gt;&gt;TestBaseClass.login()[pri:0, instance:com.hms.registration.TestEmergencyRegistration@8646db9]">&gt;&gt;login</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@586084331</td>   <td></td> </tr>
-<tr bgcolor="9168bc">  <td>19/03/15 17:02:58</td>   <td>16144</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBaseClass.beforeClass()[pri:0, instance:com.hms.registration.TestEmergencyRegistration@8646db9]">&gt;&gt;beforeClass</td> 
+<tr bgcolor="9168bc">  <td>19/03/15 18:06:05</td>   <td>15941</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBaseClass.beforeClass()[pri:0, instance:com.hms.registration.TestEmergencyRegistration@8646db9]">&gt;&gt;beforeClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@586084331</td>   <td></td> </tr>
+<tr bgcolor="87767d">  <td>19/03/15 18:06:05</td>   <td>16038</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestEmergencyRegistration.testEmergencyRegistration(java.util.Map, java.lang.String)[pri:0, instance:com.hms.registration.TestEmergencyRegistration@8646db9]">testEmergencyRegistration</td> 
+  <td>main@586084331</td>   <td></td> </tr>
+<tr bgcolor="9168bc">  <td>19/03/15 18:06:12</td>   <td>23757</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:com.hms.registration.TestEmergencyRegistration@8646db9]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@586084331</td>   <td></td> </tr>
 </table>
