--- a/test-output/old/registration_suite/methods.html
+++ b/test-output/old/registration_suite/methods.html
@@ -1,10 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>registration_suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9168bc">  <td>19/03/15 17:02:14</td>   <td>0</td> <td title="&gt;&gt;TestBaseClass.launchBrowser()[pri:0, instance:com.hms.registration.TestPermanenetRegistration@12f41634]">&gt;&gt;launchBrowser</td> 
+<tr bgcolor="9168bc">  <td>19/03/15 18:05:11</td>   <td>0</td> <td title="&gt;&gt;TestBaseClass.launchBrowser()[pri:0, instance:com.hms.registration.TestPermanenetRegistration@12f41634]">&gt;&gt;launchBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@586084331</td>   <td></td> </tr>
-<tr bgcolor="9168bc">  <td>19/03/15 17:02:33</td>   <td>18502</td> <td>&nbsp;</td><td title="&gt;&gt;TestBaseClass.login()[pri:0, instance:com.hms.registration.TestPermanenetRegistration@12f41634]">&gt;&gt;login</td> 
+<tr bgcolor="9168bc">  <td>19/03/15 18:05:28</td>   <td>16270</td> <td>&nbsp;</td><td title="&gt;&gt;TestBaseClass.login()[pri:0, instance:com.hms.registration.TestPermanenetRegistration@12f41634]">&gt;&gt;login</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@586084331</td>   <td></td> </tr>
-<tr bgcolor="9168bc">  <td>19/03/15 17:02:40</td>   <td>26206</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBaseClass.beforeClass()[pri:0, instance:com.hms.registration.TestPermanenetRegistration@12f41634]">&gt;&gt;beforeClass</td> 
+<tr bgcolor="9168bc">  <td>19/03/15 18:05:36</td>   <td>24238</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBaseClass.beforeClass()[pri:0, instance:com.hms.registration.TestPermanenetRegistration@12f41634]">&gt;&gt;beforeClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@586084331</td>   <td></td> </tr>
+<tr bgcolor="a5fe93">  <td>19/03/15 18:05:37</td>   <td>25985</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestPermanenetRegistration.testPermanentRegistration(java.util.Map, java.lang.String)[pri:0, instance:com.hms.registration.TestPermanenetRegistration@12f41634]">testPermanentRegistration</td> 
+  <td>main@586084331</td>   <td></td> </tr>
+<tr bgcolor="9168bc">  <td>19/03/15 18:05:48</td>   <td>36802</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:com.hms.registration.TestPermanenetRegistration@12f41634]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@586084331</td>   <td></td> </tr>
 </table>
